<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.uma.techinstitute.evalucionandroid.ActividadUno"
    android:background="@drawable/layout1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoInformacion"
        android:id="@+id/textoInformacion"
        android:textColor="#fcfafa"
        android:textSize="28dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/informacionEntrada"
        android:layout_marginTop="40dp"
        android:hint="Mayor que 1"
        android:layout_below="@+id/textoInformacion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/informacionEntrada" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonCalcular"
        android:id="@+id/botonCalcular"
        android:layout_below="@+id/informacionEntrada"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonLlamar"
        android:id="@+id/botonLlamar"
        android:layout_alignTop="@+id/botonCalcular"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="51dp"
        android:layout_marginEnd="51dp" />
</RelativeLayout>
